[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Objects/Combat/SesdinShotSuper.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Particles/Teleport.png" type="Texture" id=2]
[ext_resource path="res://Sounds/Characters/Burst.wav" type="AudioStream" id=3]
[ext_resource path="res://Scripts/System/EffectAudio.gd" type="Script" id=4]
[ext_resource path="res://Sounds/Characters/Shock.wav" type="AudioStream" id=5]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 0.501961, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 2048

[sub_resource type="Gradient" id=3]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 0.501961, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]

flags = 4
gradient = SubResource( 3 )
width = 2048

[sub_resource type="ParticlesMaterial" id=5]

render_priority = 0
trail_divisor = 1
trail_color_modifier = SubResource( 4 )
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 4.0
scale_random = 0.0
color_ramp = SubResource( 2 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Gravity", "Hue Variation", "Initial Velocity", "Scale", "Spread", "Trail" ]

[sub_resource type="SpriteFrames" id=6]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=7]

custom_solver_bias = 0.0
radius = 5.09902

[node name="SesdinShotSuper" type="KinematicBody2D" index="0" groups=[
"SesdinShots",
]]

position = Vector2( 15, 102 )
input_pickable = false
collision_layer = 26
collision_mask = 26
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "collision" ]

[node name="Trail" type="Particles2D" parent="." index="0"]

emitting = false
amount = 15
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 2.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 5 )
texture = ExtResource( 2 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="AnimatedSprite" parent="." index="1"]

frames = SubResource( 6 )
animation = "default"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 0.5, 0.5 )
shape = SubResource( 7 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="SoundFire" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 3 )
volume_db = -3.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
script = ExtResource( 4 )

[node name="SoundExplode" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 5 )
volume_db = 4.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
script = ExtResource( 4 )

[node name="SoundExplode2" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
script = ExtResource( 4 )

[node name="TimerFire" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="TimerFire" to="." method="_on_TimerFire_timeout"]


